fixing sandboxed issue on editor and can run play from phone again

--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -12,7 +12,7 @@
 
   <div id="jobsubmit-modal" class="reveal-modal medium" data-reveal>
     <div id="modal-title">Submit Job</div>
-    <form id="jobsubmit-form">
+    <div id="jobsubmit-form">
         <div class="row">
             <label for="jobsubmit-name">Name:</label>
             <input id="jobsubmit-name" type="text" name="jobsubmit-name" value="" />
@@ -29,10 +29,10 @@
         <div class="row">
              <div class="right">
                  <button id="jobsubmit-cancel" class="button radius alert">Cancel</button>
-                 <button type="submit" class="button radius success">Submit Job</button>
+                 <button id="jobsubmit-submit" class="button radius success">Submit Job</button>
              </div>
          </div>
-     </form>
+     </div>
      <a class="close-reveal-modal" id="close-jobsubmit-modal">&#215;</a>
     </div>
 
