fix label of the report interval field

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -133,8 +133,9 @@
               <div class="row collapse">
                 <label>Status Report Interval</label>
                 <div class="small-9 columns">
-                <input type="text" id="driver-si" class="driver-input" />
-                               <div class="small-3 columns">
+                  <input type="text" id="driver-si" class="driver-input" />
+                </div>
+                <div class="small-3 columns">
                   <span class="postfix">ms</span>
                 </div>
               </div>
