--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -104,9 +104,9 @@
             </div>
             <div class="large-4 columns">
               <div class="row collapse">
-                <label>Junction Aggression</label>
+                <label>Junction Integration Time</label>
                 <div class="small-12 columns">
-                  <input type="text" id="driver-ja" class="driver-input" />
+                  <input type="text" id="driver-jt" class="driver-input" />
                 </div>
               </div>
             </div>
