adding quit input option

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1724,6 +1724,26 @@
               </div>
             </div>
           </fieldset>
+          <fieldset>
+            <legend>Quit Button</legend>
+            <div class="large-6 columns">
+              <div class="row collapse">
+                <label>Quit Button Input
+                  <select id="machine-quit_input" class="machine-input">
+                    <option value="1">Input 1</option>
+                    <option value="2">Input 2</option>
+                    <option value="3">Input 3</option>
+                    <option value="4">Input 4</option>
+                    <option value="5">Input 5</option>
+                    <option value="6">Input 6</option>
+                    <option value="7">Input 7</option>
+                    <option value="8">Input 8</option>
+                  </select>
+                </label>
+              </div>
+   
+            </div>
+          </fieldset>
 
         </div>
       </section>
