--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1574,7 +1574,7 @@
                   <input type="number" id="machine-envelope-xmin" class="machine-input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">in</span>
+                  <span class="postfix in_mm_label"></span>
                 </div>
               </div>
             </div>
@@ -1586,7 +1586,7 @@
                   <input type="number" id="machine-envelope-xmax" class="machine-input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">in</span>
+                  <span class="postfix in_mm_label"></span>
                 </div>
               </div>
             </div>
@@ -1598,7 +1598,7 @@
                   <input type="number" id="machine-envelope-ymin" class="machine-input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">in</span>
+                  <span class="postfix in_mm_label"></span>
                 </div>
               </div>
             </div>
@@ -1610,7 +1610,7 @@
                   <input type="number" id="machine-envelope-ymax" class="machine-input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">in</span>
+                  <span class="postfix in_mm_label"></span>
                 </div>
               </div>
             </div>
