--- a/dashboard/apps/tour.fma/index.html
+++ b/dashboard/apps/tour.fma/index.html
@@ -8,18 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="image-container">
-        <img  src="images/Handibot-2.0-Home.png">
-    </div>
-    <div class="content">
-        <h1>Welcome To Fabmo</h1>
-        <span> We are excited to help you get up and running with your new tool.</span>
+    <div class="tour-container">
+        <div class="tour-card">
+            <div class="image-container">
+                <img  src="images/Handibot-2.0-Home.png">
+            </div>
+            <div class="content">
+                <h4>Welcome To FabMo</h4>
+                <span> We are excited to help you get up and running with your new tool.</span>
+            </div>
+        </div>
     </div>
     <div class="bottom-nav">
-        <span><i class="fa fa-caret-left" aria-hidden="true"></i></span>
-        <span>Previous step</span>
-        <span>Next step</span>
-        <span><i class="fa fa-caret-right" aria-hidden="true"></i></span>
+        <span class="prev"><i class="fa fa-caret-left" aria-hidden="true"></i> Previous step</span>
+        <span class="next">Next step <i class="fa fa-caret-right" aria-hidden="true"></i></span>
     </div>
     <div class="filter"><div>
 </body>
