add upload progress report to the JM

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -28,6 +28,9 @@
   </section>
 </nav>
 </div>
+<span class="progressbar hide">
+  <div class="fill"></div>
+</span>
 <form style="display:none;" id="fileform">
 	<input type="file" id="file" multiple>
 </form>
@@ -136,7 +139,7 @@
   <!-- Javascript inclusions -->
   <script src="../../common.js"></script>
   <script src="../../job_manager.js"></script>
-	
+
 
 
 </body>
