adding content and more js

--- a/dashboard/apps/tour.fma/index.html
+++ b/dashboard/apps/tour.fma/index.html
@@ -8,17 +8,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div class="tour-container">
-        <div class="tour-card">
+    <ul id="tour-container">
+        <li class="tour-card">
             <div class="image-container">
-                <img  src="images/Handibot-2.0-Home.png">
+                <img  src="images/Handibot.png">
             </div>
             <div class="content">
                 <h4>Welcome To FabMo</h4>
                 <span> We are excited to help you get up and running with your new tool.</span>
             </div>
-        </div>
-    </div>
+        </li>
+    </ul>
     <div class="bottom-nav">
         <span class="prev"><i class="fa fa-caret-left" aria-hidden="true"></i> Previous step</span>
         <span class="next">Next step <i class="fa fa-caret-right" aria-hidden="true"></i></span>
