--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -11,8 +11,8 @@
     <div id="passwd-modal" class="reveal-modal medium" data-reveal>
     <div id="modal-title"></div>
       <div class="row">
-          <label for="password">Passphrase</label>
-          <input type="password" name="password" id="txt-password"/>
+          <label for="wifi-password">Passphrase</label>
+          <input type="password" name="wifi-password" autocomplete="new-password" id="txt-password"/>
       </div>
       <div class="row">
            <div class="right">
@@ -84,6 +84,6 @@
 
   <!-- Javascript inclusions -->
     <script src="../../common.js"></script>
-    <script src="../../network_manager.js"></script>  
+    <script src="../../network_manager.js"></script>
 </body>
 </html>
