fixing socket path for demo

--- a/dashboard/apps/home.fma/index.html
+++ b/dashboard/apps/home.fma/index.html
@@ -15,7 +15,7 @@
             <ul id="app_menu_container"></ul>
         </div>
     </section>
-    <div class="filter"><div>
+    <div class="filter"></div>
 </body>
 <script src="../../common.js"></script>
 <script src="../../home.js"></script>
