--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -9,6 +9,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 <body>
+	<div class="filter"></div>
+	<div class="tour-dialogue">
+			<p class="tour-text"></p>
+			<div class="next">Next > </div>
+	</div>
+	<div class="tour-pointer"><span>You can preview the job</span><div class="pointer"></div></div>
   <div class="sticky">
   <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
