--- a/dashboard/apps/tour.fma/index.html
+++ b/dashboard/apps/tour.fma/index.html
@@ -27,7 +27,7 @@
         <span class="prev"><i class="fa fa-caret-left" aria-hidden="true"></i> Previous step</span>
         <span class="next">Next step <i class="fa fa-caret-right" aria-hidden="true"></i></span>
     </div>
-    <div class="filter"><div>
+    <div class="filter"></div>
 </body>
 <script src="../../common.js"></script>
 <script src="../../tour.js"></script>
