--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -12,7 +12,10 @@
 	<div class="filter"></div>
 	<div class="tour-dialogue">
 			<p class="tour-text"></p>
-			<div class="next">Next > </div>
+			<div class="tour-buttons">
+				<div class="next">Next > </div>
+				<div class="no">Cancel</div>
+			</div>
 	</div>
 	<div class="tour-pointer"><span>You can preview the job</span><div class="pointer"></div></div>
   <div class="sticky">
