tour refresh proof

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -13,7 +13,7 @@
 	<div class="tour-dialogue">
 			<p class="tour-text"></p>
 			<div class="tour-buttons">
-				<div class="next">Next > </div>
+				<div class="next">Next</div>
 				<div class="no">Cancel</div>
 			</div>
 	</div>
