tour videos, resize well, bomb proof

--- a/dashboard/apps/tour.fma/index.html
+++ b/dashboard/apps/tour.fma/index.html
@@ -10,14 +10,15 @@
 <body>
     
     <ul id="tour-container">
-        <li class="tour-card">
+        <li class="tour-card" id="1">
+            <div class="marker"></div>
             <div class="slide-next"></div>
             <div class="image-container">
                 <img  src="images/Handibot.png">
             </div>
             <div class="content">
                 <h4>Welcome To FabMo</h4>
-                <span> We are excited to help you get up and running with your new tool.</span>
+                <p> We are excited to help you get up and running with your new tool.</p>
             </div>
             
         </li>
