Fix error reporting in resubmitjob

--- a/dashboard/apps/selftest.fma/index.html
+++ b/dashboard/apps/selftest.fma/index.html
@@ -94,6 +94,12 @@
 			<td></td>
 		</tr>
 		<tr>
+			<td class="go fa fa-play" id="resubmitJobFail"></td>
+			<td>Resubmit an invalid job</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
 			<td class="go fa fa-play" id="runNext"></td>
 			<td>Run next job</td>
 			<td></td>
