--- a/dashboard/apps/tour.fma/index.html
+++ b/dashboard/apps/tour.fma/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<div class="tour-decloration">
+    <p>Other features are blurred while in tour mode. To leave click <a href="#">here</a>.</p>
+</div>
     
     <ul id="tour-container">
         <li class="tour-card" id="1">
