--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../../css/dashboard.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/gcodeviewer.css">
 </head>
 
 <body>
