Add configuration profiling for config and macros.

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -74,6 +74,16 @@
                 </div>
               </div>
             </div>
+            <div class="large-4 columns"> 
+              <div class="row collapse">
+                <label data-tip="The machine profile sets the default values, apps and macros for your tool.  Changing this setting will require you to reboot your tool.">Machine Profile<div class="tool-tip">i</div></label>
+                <select id="engine-profile" class="engine-input">
+                  <option value="default">Default</option>
+                  <option value="desktop_max">Desktop MAX</option>
+                  <option value="handibot">Handibot</option>
+                </select>
+              </div>
+            </div>
             <div class="large-4 columns">
               <div class="row collapse">
                 <label data-tip="The distance units that will be used by default for the DRO display and in supported apps.">Default Unit System<div class="tool-tip">i</div></label>
