Add ATC profile to list of choices

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -81,6 +81,7 @@
                   <option value="default">Default</option>
                   <option value="desktop_max">Desktop MAX</option>
                   <option value="handibot">Handibot</option>
+                  <option value="atc">ATC (Experimental)</option>
                 </select>
               </div>
             </div>
