Add profile for desktop max

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -79,6 +79,7 @@
                 <select id="engine-profile" class="engine-input">
                   <option value="default">Default</option>
                   <option value="handibot">Handibot</option>
+                  <option value="dtmax">Desktop MAX</option>
                 </select>
               </div>
             </div>
