adding inputs for manual jerk

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1698,6 +1698,26 @@
                 </div>
               </div>
 
+              <div class="row collapse">
+                <label data-tip='How quickly the tool will accelerate and decelerate in the X and Y axes'>XY Jerk <div class="tool-tip">i</div></label>
+                <div class="small-9 columns">
+                  <input type="number" id="machine-manual-xy_jerk" class="machine-input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix inpm3_mmpm3_label">mm/min<sup>3</sup></span>
+                </div>
+              </div>
+
+              <div class="row collapse">
+                <label data-tip='How quickly the tool will accelerate and decelerate in the Z axi'>Z Jerk <div class="tool-tip">i</div></label>
+                <div class="small-9 columns">
+                  <input type="number" id="machine-manual-z_jerk" class="machine-input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix inpm3_mmpm3_label">mm/min<sup>3</sup></span>
+                </div>
+              </div>
+
             </div>
           </fieldset>
         </div>
