--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -80,8 +80,7 @@
                   <option value="default">Default</option>
                   <option value="handibot">Handibot</option>
                   <option value="handibot2">Handibot 2</option>
-                  <option value="dtmax">Desktop MAX</option>
-                  <option value="buddy">Buddy</option>
+                  <option value="handibot-lst">Handibot Long Sheet Tool</option>
                 </select>
               </div>
             </div>
