Add the desktop to the profiles list

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -81,6 +81,7 @@
                   <option value="handibot">Handibot 1 (Developer Edition)</option>
                   <option value="handibot2">Handibot 2 (Adventure Edition)</option>
                   <option value="handibot-lst">Handibot Long Sheet Tool</option>
+                  <option value="dt">Desktop</option>
                 </select>
               </div>
             </div>
