bringing in master

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1670,6 +1670,26 @@
               </div>
 
               <div class="row collapse">
+                <label data-tip="Minimum adjustable speed for driving the tool with the keypad. ">Min XY Speed <div class="tool-tip">i</div></label>
+                <div class="small-9 columns">
+                  <input type="number" id="machine-manual-xy_min" class="machine-input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix ips_mmps_label">&nbsp;</span>
+                </div>
+              </div>
+
+              <div class="row collapse">
+                <label data-tip="Maximum adjustable speed for driving the tool with the keypad. "> Max XY Speed <div class="tool-tip">i</div></label>
+                <div class="small-9 columns">
+                  <input type="number" id="machine-manual-xy_max" class="machine-input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix ips_mmps_label">&nbsp;</span>
+                </div>
+              </div>
+
+              <div class="row collapse">
                 <label data-tip="Z speed when driving the tool with the DRO display or keyboard.">Z Speed <div class="tool-tip">i</div></label>
                 <div class="small-9 columns">
                   <input type="number" id="machine-manual-z_speed" class="machine-input" />
