--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -76,12 +76,7 @@
             <div class="large-4 columns"> 
               <div class="row collapse">
                 <label data-tip="The machine profile sets the default values, apps and macros for your tool.  Changing this setting will require you to reboot your tool.">Machine Profile<div class="tool-tip">i</div></label>
-                <select id="engine-profile" class="engine-input">
-                  <option value="default">Default</option>
-                  <option value="handibot">Handibot 1 (Developer Edition)</option>
-                  <option value="handibot2">Handibot 2 (Adventure Edition)</option>
-                  <option value="handibot-lst">Handibot Long Sheet Tool</option>
-                  <option value="dt">Desktop</option>
+                <select id="profile-listbox">
                 </select>
               </div>
             </div>
