--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1704,6 +1704,7 @@
                 </div>
               </div>
 
+
               <div class="row collapse">
                 <label data-tip='Amount to move in the Z axis for each "nudge" or incremental move issued from the keyboard or DRO'>Z Increment <div class="tool-tip">i</div></label>
                 <div class="small-9 columns">
@@ -1711,6 +1712,15 @@
                 </div>
                 <div class="small-3 columns">
                   <span class="postfix in_mm_label">&nbsp;</span>
+                </div>
+              </div>
+              <div class="row collapse">
+                <label data-tip='Amount to move in the a and b axis for each "nudge" or incremental move issued from the keyboard or DRO'>AB Increment <div class="tool-tip">i</div></label>
+                <div class="small-9 columns">
+                  <input type="number" id="machine-manual-ab_increment" class="machine-input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix">deg</span>
                 </div>
               </div>
 
