manual message and home improvements

--- a/dashboard/apps/home.fma/index.html
+++ b/dashboard/apps/home.fma/index.html
@@ -8,14 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    
-    <input type="file" style="display:none;" id="file">
-    <section id="app-section" class="app-section">
-        <div style="height:100%">
-            <ul id="app_menu_container"></ul>
+    <input type="file" id="file">
+    <div class="app-section">
+        <div>
+            <div id="app_menu_container"></div>
         </div>
-    </section>
+    </div>
     <div class="filter"></div>
+
 </body>
 <script src="../../common.js"></script>
 <script src="../../home.js"></script>
