fixing jm file load bar

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -38,7 +38,7 @@
 </nav>
 </div>
 <span class="progressbar hide">
-  <div class="fill"></div>
+  <div class="bar-fill"></div>
 </span>
 <form style="display:none;" id="fileform">
 	<input type="file" id="file" multiple>
