z fast and z slow configerable

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -1683,9 +1683,18 @@
               </div>
 
               <div class="row collapse">
-                <label data-tip="Z speed when driving the tool with the DRO display or keyboard.">Z Speed <div class="tool-tip">i</div></label>
+                <label data-tip="The faster Z move speed controlled by the manual keypad.">Z Speed Fast <div class="tool-tip">i</div></label>
                 <div class="small-9 columns">
-                  <input type="number" id="machine-manual-z_speed" class="machine-input" />
+                  <input type="number" id="machine-manual-z_fast_speed" class="machine-input" />
+                </div>
+                <div class="small-3 columns">
+                  <span class="postfix ips_mmps_label">&nbsp;</span>
+                </div>
+              </div>
+              <div class="row collapse">
+                <label data-tip="The slower Z move speed controlled by the manual keypad.">Z Speed Slow <div class="tool-tip">i</div></label>
+                <div class="small-9 columns">
+                  <input type="number" id="machine-manual-z_slow_speed" class="machine-input" />
                 </div>
                 <div class="small-3 columns">
                   <span class="postfix ips_mmps_label">&nbsp;</span>
