UI reports IP on wifi connection and more

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -151,23 +151,28 @@
         </div>
 
 	<div class="row">
-	    <fieldset>
-		<legend>Updates</legend>
-
-		<div class="large-4 columns">
-		    <div class="row collapse">
-			<label data-tip="The version of FabMo that is currently running on this tool.">Software Version<div class="tool-tip">i</div></label>
-			<div class="columns">
-			    <span class="engine-version"></span>
-			</div>
-		    </div>
-		</div>
-		<div class="large-4 columns">
-		    <div class="row collapse">
-			<a id="btn-update"  class="button radius small disabled noselect">No Updates Available!</a>
-		    </div>
-		</div>
-	    </fieldset>
+	  <fieldset>
+		  <legend>Updates</legend>
+      <div class="large-4 columns">
+        <div class="row collapse">
+          <label data-tip="The version of FabMo that is currently running on this tool.">Software Version<div class="tool-tip">i</div></label>
+          <div class="columns">
+              <span class="engine-version"></span>
+          </div>
+        </div>
+      </div>
+      <div class="large-4 columns">
+          <div class="row collapse">
+            <a id="btn-update"  class="button radius small disabled noselect">No Updates Available!</a>
+          </div>
+      </div>
+      <div class="large-4 columns">
+        <div class="row collapse">
+          <a id="btn-flash-firm"  class="button radius small">Update firmware from file</a>
+          <input type="file" id="firmware-input">
+        </div>
+      </div>
+	  </fieldset>
 	</div>
 <!--
         <div class="row">
