--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -46,6 +46,8 @@
     </nav>
   </div>
 
+  
+
   <div class="row">
     <!--  <form> -->
 
@@ -57,11 +59,11 @@
         <div class="row">
           <fieldset>
             <legend>General Settings</legend>
-            <div class="large-4 columns" id="section-machine-name">
+            <div class="large-4 columns" >
               <div class="row collapse">
                 <label data-tip="The name of your tool.  The tool name will be displayed on the dashboard, and is used as the network name for wireless and wired networking.">Machine Name<div class="tool-tip">i</div></label>
                 <div class="small-12 columns">
-                  <input type="text" id="input-machine-name" class="input" />
+                  <input type="text"  id="engine-name" class="engine-input"/>
                 </div>
               </div>
             </div>
@@ -169,7 +171,7 @@
       <div class="large-4 columns">
         <div class="row collapse">
           <a id="btn-flash-firm"  class="button radius small">Update firmware from file</a>
-          <input type="file" id="firmware-input">
+          <input style="display:none" type="file" id="firmware-input">
         </div>
       </div>
 	  </fieldset>
