--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -70,9 +70,8 @@
             <table class="small-12 columns" style="width:100%" id="history_table">
             <thead>
                 <tr>
-                    <th>SSID</th>
+                    <th>Interface</th>
                     <th>IP Address</th>
-                    <th>Last Connected</th>
                 </tr>
             </thead>
             <tbody><tr></tr></tbody>
