adding update infra

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -165,7 +165,8 @@
       </div>
       <div class="large-4 columns">
           <div class="row collapse">
-            <a id="btn-update"  class="button radius small disabled noselect">No Updates Available!</a>
+            <a id="btn-update"  class="button radius small">Update from file</a>
+            <input style="display:none" type="file" id="update-input">
           </div>
       </div>
       <div class="large-4 columns">
