name changes save

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -154,7 +154,7 @@
 
 	<div class="row">
 	  <fieldset>
-		  <legend>Updates</legend>
+		  <legend>Update</legend>
       <div class="large-4 columns">
         <div class="row collapse">
           <label data-tip="The version of FabMo that is currently running on this tool.">Software Version<div class="tool-tip">i</div></label>
