implementing ^d on feedholds in manual

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -935,7 +935,7 @@
               <div class="row collapse">
                 <label>Enabled
                   <select id="driver-di4en" class="driver-input">
-                    <option value="fase">False</option>
+                    <option value="false">False</option>
                     <option value="true">True</option>
                   </select>
                 </label>
@@ -976,7 +976,7 @@
               <div class="row collapse">
                 <label>Enabled
                   <select id="driver-di5en" class="driver-input">
-                    <option value="false">Falsew</option>
+                    <option value="false">False</option>
                     <option value="true">True</option>
                   </select>
                 </label>
