refs #48448 change filebox text.

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -57,7 +57,7 @@
 						<div class="without-job">
 							<div class="submitWrapper">
 								<div class="submitActions">
-									<img src="images/click.png">
+									<h5 class='no-job'>Click To Browse</h5>
 									<p>or</p>
 									<h5 class='no-job'>Drag files here</h5>
 								</div>
