adding t-dev-1 to master

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -154,7 +154,7 @@
 
 	<div class="row">
 	  <fieldset>
-		  <legend>Update</legend>
+		  <legend>Updates</legend>
       <div class="large-4 columns">
         <div class="row collapse">
           <label data-tip="The version of FabMo that is currently running on this tool.">Software Version<div class="tool-tip">i</div></label>
@@ -165,8 +165,7 @@
       </div>
       <div class="large-4 columns">
           <div class="row collapse">
-            <a id="btn-update"  class="button radius small">Update from file</a>
-            <input style="display:none" type="file" id="update-input">
+            <a id="btn-update"  class="button radius small disabled noselect">No Updates Available!</a>
           </div>
       </div>
       <div class="large-4 columns">
